--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,38 +1,57 @@
-.App {
+body{
+  background-color: rgb(252, 255, 47);
+}
+
+*{
+  padding:0px;
+  margin:0px;
+  box-sizing:border-box;
+}
+
+.main-section{
+  background-color: transparent;
+  max-width: 600px;
+  width: 90%;
+  height: 500px;
+  margin:80px auto;
+  font-size:150px;
+}
+
+.clock-holder{
+  width: 100%;
+  margin:30px auto;
+  position: relative;
+}
+
+.stopwatch{
+  padding:60px 0px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-box{
+  margin-top: -80px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stopwatch .stopwatch-btn{
+  background-color: transparent;
+  margin-left: 30px;
+  margin-right: 30px;
+  border:none;
+  padding: 12px 20px;
+  font-size: 16px;
+  text-transform: uppercase;
+  width: 30%;
+  transition: background 0.5s;
+  cursor:pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.stopwatch .stopwatch-btn-black{
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stopwatch .stopwatch-btn-black:hover{
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(252, 255, 47);
+  background-color: black;
 }
